# livraria

./: db.sqlite3  pyproject.toml
livraria/: settings.py
